--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "daily-report-helper": "deno run --allow-read daily-report-helper/main.ts"
   },
   "imports": {
     "@std/assert": "jsr:@std/assert@1"
