--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,10 @@
 {
   "tasks": {
-    "daily-report-helper": "deno run --allow-read daily-report-helper/main.ts"
+    "daily-report-helper": "deno run --allow-read daily-report-helper/main.ts",
+    "daily-report-helper encrypt": "deno run --allow-env"
   },
   "imports": {
-    "@std/assert": "jsr:@std/assert@1"
+    "@std/assert": "jsr:@std/assert@1",
+    "age-encryption": "npm:age-encryption@^0.2.3"
   }
 }
