--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,7 @@
   "imports": {
     "@std/assert": "jsr:@std/assert@1",
     "age-encryption": "npm:age-encryption@^0.2.3",
-    "json5": "npm:json5@^2.2.3"
+    "json5": "npm:json5@^2.2.3",
+    "zod": "npm:zod@^3.24.3"
   }
 }
